backend/k8s/client-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client-service
          image: boukheroukmohamed/client-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: my-namespace
spec:
  ports:
    - port: 8081
  selector:
    app: client-service
