backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "discovery-service"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "discovery-service"
  template:
    metadata:
      labels:
        app: "discovery-service"
    spec:
      containers:
        - name: "discovery-service"
          image: boukheroukmohamed/discovery-service:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: "discovery-service"
spec:
  type: LoadBalancer
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: "discovery-service"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: boukheroukmohamed/gateway-service:latest
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - port: 8888
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client-service
          image: boukheroukmohamed/client-service:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-service
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage-service
  template:
    metadata:
      labels:
        app: garage-service
    spec:
      containers:
        - name: service
          image: boukheroukmohamed/garage-service:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: garage-service
spec:
  selector:
    app: garage-service
  ports:
    - port: 8082
      targetPort: 8082
---
