backend/k8s/discovery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: boukheroukmohamed/discovery-service:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: my-namespace
spec:
  ports:
    - port: 8761
  selector:
    app: discovery-service
