backend/k8s/facture-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facture-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facture-service
  template:
    metadata:
      labels:
        app: facture-service
    spec:
      containers:
        - name: facture-service
          image: boukheroukmohamed/facture-service:latest
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: facture-service
  namespace: my-namespace
spec:
  ports:
    - port: 8088
  selector:
    app: facture-service
