backend/k8s/garage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage-service
  template:
    metadata:
      labels:
        app: garage-service
    spec:
      containers:
        - name: garage-service
          image: boukheroukmohamed/garage-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: garage-service
  namespace: my-namespace
spec:
  ports:
    - port: 8082
  selector:
    app: garage-service
