backend/k8s/planification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planification-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planification-service
  template:
    metadata:
      labels:
        app: planification-service
    spec:
      containers:
        - name: planification-service
          image: boukheroukmohamed/planification-service:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: planification-service
  namespace: my-namespace
spec:
  ports:
    - port: 8084
  selector:
    app: planification-service
